# openrouter_responses_pipe

./: .gitignore  ARCHITECTURE_COMPARISON.md  EXTRACTION_PROGRESS.md  EXTRACTION_STATUS.md  MODULAR_EXTRACTION.md  MODULAR_SPLIT_PLAN.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  STUB_DESIGN.md  TESTING.md  open_webui_openrouter_pipe.py  openrouter_stub.py  pyproject.toml  setup.py  stub_loader.py
docs/: README.md  model_catalog_and_routing_intelligence.md  openrouter_direct_uploads.md  openrouter_integrations_and_telemetry.md  openrouter_provider_routing.md  openrouter_zdr.md  tooling_and_integrations.md  valves_and_configuration_atlas.md
filters/: openrouter_direct_uploads_toggle.py
open_webui_openrouter_pipe/: __init__.py  open_webui_openrouter_pipe.py  pipe.py
open_webui_openrouter_pipe/api/: filters.py  transforms.py
open_webui_openrouter_pipe/core/: config.py  error_formatter.py
open_webui_openrouter_pipe/models/: catalog_manager.py  reasoning_config.py  registry.py
open_webui_openrouter_pipe/requests/: nonstreaming_adapter.py  orchestrator.py
src/: monolith_working.py
src/openrouter_modules/: pipe.py
src/openrouter_modules.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api_transforms.py  test_chat_gateway.py  test_filters.py  test_helpers.py  test_nonstreaming_adapter.py  test_pipe.py  test_provider_routing_catalog_schema.py  test_provider_routing_security.py  test_reasoning.py  test_registry_plumbing.py  test_request_orchestrator.py  test_request_transformer.py  test_streaming_handler.py
(+17 files in other folders)
