[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter_modules"
version = "2.0.0"
description = "Modular components for OpenRouter Responses API pipe (Open WebUI)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "rbb-dev"}
]
maintainers = [
  {name = "rbb-dev"}
]
dependencies = [
  "aiohttp>=3.9.0",
  "cryptography>=41.0.0",
  "fastapi>=0.100.0",
  "httpx>=0.25.0",
  "lz4>=4.0.0",
  "pydantic>=2.0.0",
  "pydantic_core>=2.0.0",
  "sqlalchemy>=2.0.0",
  "tenacity>=8.0.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/rbb-dev"
Repository = "https://github.com/rbb-dev/openrouter_responses_pipe/"
Documentation = "https://github.com/rbb-dev/openrouter_responses_pipe/blob/main/docs/documentation_index.md"
"Bug Tracker" = "https://github.com/rbb-dev/openrouter_responses_pipe/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openrouter_modules*"]
